# guest-components

./: Cargo.toml  Makefile  trustiflux.spec
.github/workflows/: aa_cc_kbc.yml  build_rpm.yml  codeql.yml
attestation-agent/: Makefile  README.md
attestation-agent/attestation-agent/: Cargo.toml
attestation-agent/attestation-agent/src/: lib.rs
attestation-agent/attestation-agent/src/config/: mod.rs
attestation-agent/attestation-agent/src/token/: kbs.rs
attestation-agent/attester/: Cargo.toml
attestation-agent/attester/src/: lib.rs
attestation-agent/attester/src/sgx_occlum/: mod.rs
attestation-agent/attester/src/tdx/: mod.rs  rtmr.rs
attestation-agent/kbs_protocol/: Cargo.toml  build.rs
attestation-agent/kbs_protocol/src/: builder.rs  error.rs  lib.rs
attestation-agent/kbs_protocol/src/aa_client/: attestation_agent.rs  attestation_agent_ttrpc.rs  mod.rs
attestation-agent/kbs_protocol/src/client/: mod.rs  rcar_client.rs
attestation-agent/lib/: Cargo.toml
attestation-agent/lib/src/: aa_kbc_params.rs  eventlog.rs  lib.rs
attestation-agent/protos/: attestation-agent.proto
confidential-data-hub/hub/: Cargo.toml  build.rs
confidential-data-hub/hub/src/auth/: kbs.rs  mod.rs
confidential-data-hub/kms/: Cargo.toml
confidential-data-hub/kms/src/plugins/kbs/: cc_kbc.rs
confidential-datahub/kms/: Cargo.toml  build.rs
confidential-datahub/kms/src/: api.rs  error.rs
confidential-datahub/kms/src/plugins/: mod.rs
confidential-datahub/kms/src/plugins/aliyun/: client.rs  client_util.rs  config.rs  credential.rs  mod.rs  models.rs
confidential-datahub/kms/src/plugins/aliyun/protobuf/: dkms_api.proto
image-rs/src/: config.rs  image.rs  pull.rs  stream.rs  unpack.rs
image-rs/src/resource/kbs/: mod.rs
image-rs/src/stream/: mod.rs  unpack.rs
ocicrypt-rs/src/: encryption.rs
ocicrypt-rs/src/keywrap/: keyprovider.rs
