[package]
name = "attestation-agent"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[[bin]]
name = "grpc-aa"
required-features = ["bin", "grpc"]

[[bin]]
name = "ttrpc-aa"
required-features = ["bin", "ttrpc"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
attester = { path = "../attester", default-features = false }
base64.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
const_format = { workspace = true, optional = true }
kbs-types.workspace = true
log.workspace = true
prost = { workspace = true, optional = true }
protobuf = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
toml.workspace = true
tonic = { workspace = true, optional = true }
ttrpc = { workspace = true, features = ["async"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = { workspace = true, optional = true }
ttrpc-codegen = { workspace = true, optional = true }

[features]
default = ["bin", "ttrpc"]

# Attestation Token support
token = []

# CoCoAS Attestation Token
coco_as = ["reqwest", "token"]

all-attesters = ["attester/all-attesters"]
tdx-attester = ["attester/tdx-attester"]
sgx-attester = ["attester/sgx-attester"]
az-snp-vtpm-attester = ["attester/az-snp-vtpm-attester"]
az-tdx-vtpm-attester = ["attester/az-tdx-vtpm-attester"]
snp-attester = ["attester/snp-attester"]

# Binary RPC type
bin = ["clap", "tokio/rt-multi-thread"]
grpc = ["prost", "tonic", "tonic-build", "tokio/signal"]
ttrpc = ["const_format", "dep:ttrpc", "ttrpc-codegen", "protobuf", "tokio/signal"]
