[package]
name = "kbs_protocol"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
crypto = { path = "../deps/crypto", default-features = false }
jwt-simple.workspace = true
kbs-types.workspace = true
log.workspace = true
protobuf = { workspace = true, optional = true}
rcgen = { version = "0.12.1", features = ["x509-parser"]}
reqwest = { workspace = true, features = ["cookies", "json", "rustls-tls"], optional = true }
resource_uri.path = "../deps/resource_uri"
rustls = { version = "0.21" }
rustls-pemfile = { version = "1" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
ttrpc = { workspace = true, optional = true}
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
rstest.workspace = true
serial_test.workspace = true
tempfile.workspace = true
testcontainers.workspace = true
tokio = { workspace = true, features = [ "rt", "macros", "fs", "process" ]}

[build-dependencies]
ttrpc-codegen = { workspace = true, optional = true }

[features]
default = ["background_check", "passport", "rust-crypto", "aa_token"]

passport = []
# use a client of attestation-agent to get token for kbs
aa_token = ["ttrpc-codegen", "passport", "ttrpc/async", "protobuf"]

background_check = ["tokio/time"]

rust-crypto = ["reqwest/rustls-tls", "crypto/rust-crypto"]
openssl = ["reqwest/native-tls-vendored", "crypto/openssl"]
