[package]
name = "kms"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
publish = false
edition = "2021"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sha2 = { version = "0.10.6" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4.26"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.12.1"
hex = "0.4.3"
pem = "2.0.1"
prost = { version = "0.11" }
tonic = { version = "0.9" }
openssl = "0.10.54"

[dev-dependencies]
rstest.workspace = true
tokio = { version = "1.0", features = ["rt", "macros" ] }

[build-dependencies]
anyhow = "1"
tonic-build = { version = "0.8" }